--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
-        "@fortawesome/fontawesome-svg-core": "^6.7.1",
-        "@fortawesome/free-brands-svg-icons": "^6.7.1",
-        "@fortawesome/free-regular-svg-icons": "^6.7.1",
-        "@fortawesome/free-solid-svg-icons": "^6.7.1",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/free-regular-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@inertiajs/react": "^1.2.0",
         "@mui/icons-material": "^6.1.10",
@@ -40,8 +40,10 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
+        "react-redux": "^9.2.0",
         "react-slick": "^0.30.3",
-        "react-toastify": "^11.0.2",
+        "react-toastify": "^11.0.3",
+        "redux": "^5.0.1",
         "slick-carousel": "^1.8.1",
         "swiper": "^11.1.15"
     }
