--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
         "@nivo/pie": "^0.88.0",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
+        "framer-motion": "^12.4.7",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-redux": "^9.2.0",
+        "react-router-dom": "^7.2.0",
         "react-slick": "^0.30.3",
         "react-toastify": "^11.0.3",
         "redux": "^5.0.1",
